Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
 
       </header>
       <section>
-        <h3>
-<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
+        <h2>
+<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h2>
 
 <p>In this short game, you seek to defeat the Ice Queen who has created an eternal winter over the land.</p>
 
 <p>Ice Queen is a home-made tile-based role-playing game inspired by Phantasie II for the Atari ST. It was originally created around 1995 using Turbo Pascal 6.0 in a 16-color palette. The latest updates provide for compiling using FreePascal? on either Windows or Linux (and maybe others) using SDL.</p>
 
-<h3>
-<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
+<h2>
+<a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h2>
+
+<p><a href="https://drive.google.com/folderview?id=0B6Q806w7I7EHeGkyTUF0N0RmeUE&amp;usp=sharing#list">Releases</a></p>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
 <p>This software is distributed under the GPL version 2.
 You can find a copy of this license in the file called 'LICENSE'.
